# solana_projects

./: README.md
airdropper/: index.ts  package-lock.json
amman/: .ammanrc.sample.js  .gitignore  app.ts  package.json  pnpm-lock.yaml
anchor/: README.md
anchor_mint_nft/: Anchor.toml
anchor_mint_nft/programs/anchor_mint_nft/: Cargo.toml
anchor_mint_nft/programs/anchor_mint_nft/src/: lib.rs
anchor_scaffold/: Anchor.toml
anoni_dapp/: Anchor.toml
anony_dapp/: Anchor.toml
blinks/: .env.sample  README.md  app.ts  index.ts  jest.config.js  jest.setup.ts  package.json
bridge_to_turbine/: README.md  airdrop.ts  dev.json  enroll.ts  generate_account.ts  package.json  pnpm-lock.yaml  programs.ts  transfer.ts
calculate_account_cost/: index.ts  package.json
candy_machine_create_nft/: index.ts  package-lock.json  package.json
candy_machine_node/: index.ts  package-lock.json  package.json
connect_wallet/: package-lock.json  package.json
core_staking/: Anchor.toml
create_account/: Cargo.toml
create_keypair_generate/: Cargo.toml
create_system_account_ts/: index.ts  package-lock.json
crm_dapp/: Anchor.toml
crowdfunding/: Anchor.toml  id.json
express_blinks_v2/: index.ts  package.json  pnpm-lock.yaml
express_mint_nft/: .gitignore  .sample.env  index.ts  package-lock.json  package.json
express_string_saver/: Anchor.toml
express_todo/: Anchor.toml
fe/: .sample.env  package-lock.json  package.json  pnpm-lock.yaml
fungible_token/: config.js  index.js  package-lock.json  package.json
generate_keypair_dapp/: package-lock.json  package.json
(+669 files in other folders)
